# plane_edge_slam

./: CMakeLists.txt  README.md  backup.sh
run/: calibration_0617.txt  evaluate.sh  run.sh  runCalib.sh  runSLAM.sh  test.sh
run/bash/: eval.sh  evaluate_rpe.py  evaluate_rpe_3.py  plot_num.py
run/evaluate/: associate.py  evaluate_ate.py  evaluate_ate.py~  evaluate_rpe.py  evaluate_rpe.py~
run/settings/: calib_color.yaml  calib_pose.yaml  calib_sensor_marker_0712.yaml  calib_sensor_marker_0712_weight.yaml  calib_sensor_marker_0716.yaml  calib_sensor_marker_0716_weight.yaml  calib_sensor_marker_0720.yaml  calib_sensor_marker_0720_all.yaml  calib_sensor_marker_0720_weight.yaml  calib_sensor_marker_0720_weight2.yaml  calib_sensor_marker_0723_all.yaml  calib_sensor_marker_0723_weight.yaml  calib_sensor_marker_0724_static.yaml  camera_intrinsics.yaml  settings_fr2.yaml  settings_fr3.yaml  settings_kinect2.yaml
ulysses/: CMakeLists.txt  main.cpp
ulysses/features/: edge_extraction.cpp  edge_extraction.h  it_geometric_feature_matching.cpp  it_geometric_feature_matching.h  line_extraction.cpp  line_extraction.h  plane_extraction.cpp  plane_extraction.h  plane_fitting.cpp  plane_fitting.h  plane_segmentation.cpp  plane_segmentation.h
ulysses/motion/: motion_estimation.cpp  motion_estimation.h  pose_estimation.cpp  pose_estimation.h
ulysses/systems/: .plane_edge_SLAM.cpp.un~  .plane_edge_SLAM.h.un~  plane_edge_SLAM.cpp  plane_edge_SLAM.cpp~  plane_edge_SLAM.h  plane_edge_SLAM.h~
ulysses/trajectory/: traj_puzzle.cpp  traj_puzzle.h
ulysses/types/: map.cpp  map.h  types.cpp  types.h
